bug,update:solve webpack html output problems and initPage fetch:

--- a/client/index.html
+++ b/client/index.html
@@ -16,8 +16,8 @@
 
     <div class="body-section">
         <div class="lists-wrap">
-            <div class="add-list">
-                <div class="add-title">+ Add Card</div>
+            <div class="add-list-btn">
+                <div class="add-list-title">+ Add Card</div>
             </div>
         </div>
     </div>
