feature:try createcard api

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,9 @@
 <div class="main-page">
     <div class="header-section">
         <div class="todo-logo">TODO 서비스</div>
+        <div class="baemin-img">
+            <img src="./img/baemin.png" alt="배민캐릭터">
+        </div>
         <div class="menu-btn">menu</div>
     </div>
 
