feature: markup list Modal

--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,35 @@
             </div>
         </div>
     </div>
+
+    <div id="card-modal-section">
+        <div class="card-modal-layer">
+            <div class="card-modal-header-section">
+                <div class="card-modal-header-title">Edit note</div>
+                <button class="card-modal-close-btn">✖</button>
+            </div>
+            <div class="card-modal-body-section">
+                <div class="card-modal-body-title">Note</div>
+                <textarea class="card-modal-input"></textarea>
+                <button class="card-modal-save-btn">Save note</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="list-modal-section">
+        <div class="list-modal-layer">
+            <div class="list-modal-header-section">
+                <div class="list-modal-header-title">Edit</div>
+                <button class="list-modal-close-btn">✖</button>
+            </div>
+            <div class="list-modal-body-section">
+                <div class="list-modal-body-title">Column name</div>
+                <textarea class="list-modal-input"></textarea>
+                <button class="list-modal-update-btn">Update column</button>
+            </div>
+        </div>
+    </div>
+
 </div>
 </body>
 </html>
