--- a/client/index.html
+++ b/client/index.html
@@ -11,16 +11,14 @@
 <div class="main-page">
   <div class="header-section">
     <div class="todo-logo">TODO 서비스</div>
-    <div class="baemin-img">
-      <img src="./img/baemin.png" alt="배민캐릭터">
-    </div>
+    <div class="baemin-img"></div>
     <div class="menu-btn">menu</div>
   </div>
 
   <div class="body-section">
     <div class="lists-wrap">
       <div class="add-list-btn">
-        <div class="add-list-title">+ Add Card</div>
+        <div class="add-list-title">﹢ Add Card</div>
       </div>
     </div>
   </div>
@@ -29,11 +27,11 @@
     <div class="card-modal-layer">
       <div class="card-modal-header-section">
         <div class="card-modal-header-title">Edit note</div>
-        <button class="card-modal-close-btn">✖</button>
+        <button class="card-modal-close-btn">✘</button>
       </div>
       <div class="card-modal-body-section">
         <div class="card-modal-body-title">Note</div>
-        <textarea class="card-modal-input"></textarea>
+        <textarea class="card-modal-input" maxlength="500"></textarea>
         <button class="card-modal-save-btn">Save note</button>
       </div>
     </div>
@@ -43,12 +41,48 @@
     <div class="list-modal-layer">
       <div class="list-modal-header-section">
         <div class="list-modal-header-title">Edit</div>
-        <button class="list-modal-close-btn">✖</button>
+        <button class="list-modal-close-btn">✘</button>
       </div>
       <div class="list-modal-body-section">
         <div class="list-modal-body-title">Column name</div>
-        <textarea class="list-modal-input"></textarea>
+        <textarea class="list-modal-input" maxlength="50"></textarea>
         <button class="list-modal-update-btn">Update column</button>
+      </div>
+    </div>
+  </div>
+
+  <div id="menu-section">
+    <div class="menu-layer">
+      <div class="menu-header">
+        <div class="menu-header-upper">
+          <div class="menu-title">☰ Menu</div>
+          <button class="menu-close-btn">✘</button>
+        </div>
+        <div class="menu-activity">🕓 Activity</div>
+      </div>
+      <div class="menu-body">
+        <div class="user-record-wrap">
+          <div class="user-action">
+            <div class="user-action-contents">@blair moved the column 하는중</div>
+            <div class="user-action-time">6 hours ago</div>
+          </div>
+          <div class="user-action">
+            <div class="user-action-contents">@blair moved the column 하는중</div>
+            <div class="user-action-time">6 hours ago</div>
+          </div>
+          <div class="user-action">
+            <div class="user-action-contents">@blair moved the column 하는중</div>
+            <div class="user-action-time">6 hours ago</div>
+          </div>
+          <div class="user-action">
+            <div class="user-action-contents">@blair moved the column 하는중</div>
+            <div class="user-action-time">6 hours ago</div>
+          </div>
+          <div class="user-action">
+            <div class="user-action-contents">@blair moved the column 하는중</div>
+            <div class="user-action-time">6 hours ago</div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
