--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="main-page">
   <div class="header-section">
-    <div class="todo-logo">TODO 서비스</div>
+    <div class="todo-logo">TODO 서비스(todo-6)</div>
     <div class="baemin-img"></div>
     <div class="menu-btn">menu</div>
   </div>
@@ -57,6 +57,11 @@
         <div class="menu-header-upper">
           <div class="menu-title">☰ Menu</div>
           <button class="menu-close-btn">✘</button>
+        </div>
+        <div class="menu-summary">
+          <div class="menu-summary-title">TOdo Project sprint-week-2 #3</div>
+          <div class="menu-summary-sub-title"> **Welcome to GitHub Projects** <br>
+            We're so excited that you've decided to create a new project! <br>Now that you're here, <br>let's make sure you know how to get the most out of GitHub Projects.</div>
         </div>
         <div class="menu-activity">🕓 Activity</div>
       </div>
