--- a/client/index.html
+++ b/client/index.html
@@ -51,6 +51,20 @@
     </div>
   </div>
 
+  <div id="list-modal-add-section" data-columns="3" data-index-number="12314" data-parent="cars">
+    <div class="list-modal-layer">
+      <div class="list-modal-header-section">
+        <div class="list-modal-header-title">Add List</div>
+        <button class="list-add-modal-close-btn">✘</button>
+      </div>
+      <div class="list-modal-body-section">
+        <div class="list-modal-body-title">Column name</div>
+        <textarea class="list-modal-add-input" maxlength="50"></textarea>
+        <button class="list-modal-save-btn">Create column</button>
+      </div>
+    </div>
+  </div>
+
   <div id="menu-section">
     <div class="menu-layer">
       <div class="menu-header">
