--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
   <div class="body-section">
     <div class="lists-wrap">
       <div class="add-list-btn">
-        <div class="add-list-title">﹢ Add Card</div>
+        <div class="add-list-title"><i class="fa fa-plus"></i> Add List</div>
       </div>
     </div>
   </div>
@@ -71,7 +71,14 @@
       <div class="list-modal-body-section">
         <div class="list-modal-body-title">Column name</div>
         <textarea class="list-modal-add-input" maxlength="50"></textarea>
-        <button class="list-modal-save-btn">Create column</button>
+        <div class="list-modal-option-wrap">
+          <button class="list-modal-save-btn">Create column</button>
+          <select name="admin" class="admin">
+            <option value="">  Choose authority  </option>
+            <option value="all">Private</option>
+            <option value="only">public</option>
+          </select>
+        </div>
       </div>
     </div>
   </div>
