--- a/client/login.html
+++ b/client/login.html
@@ -98,7 +98,7 @@
         <div class="login-wrap">
             <form class="user-info-wrap" action="/login" method="post">
                 <input type="text" name="username" class="username" placeholder="     Username"/>
-                <input type="text" name="password" class="password" placeholder="     Password"/>
+                <input type="password" name="password" class="password" placeholder="     Password"/>
             </form>
             <div class="btn-wrap">
                 <div class="sign-in-btn">Sign In</div>
