feature: sign out 로그라웃 버튼을 만들어서 버튼클릭시 세션이 제거되어 로그인 페이지로 이동하는 기능 추가

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,8 @@
         <i class="fa fa-instagram" style="font-size:36px"></i>
         <i class="fa fa-twitter-square" style="font-size:36px"></i>
       </div>
-      <div class="menu-btn">menu</div>
+      <div class="nav-btn" id="logout-btn">logout</div>
+      <div class="nav-btn" id="menu-btn">menu</div>
     </div>
   </div>
 
