feature: private list list를 공개 또는 허용하여 다른 사용자와 리스트를 공유할지에 대한 여부를 사용자가 설정하도록 했습니다

--- a/client/index.html
+++ b/client/index.html
@@ -75,9 +75,9 @@
         <div class="list-modal-option-wrap">
           <button class="list-modal-save-btn">Create column</button>
           <select name="admin" class="admin">
-            <option value="">  Choose authority  </option>
-            <option value="all">Private</option>
-            <option value="only">public</option>
+            <option value="none">  Choose authority  </option>
+            <option value="private">Private</option>
+            <option value="public">public</option>
           </select>
         </div>
       </div>
